# Imgui-OpenGL-Linear-Algebra-starter

./: .gitignore.txt  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: configurenbuild.yml
cmake/: RayTracingConfigure.h.in
include/: anisotropy.h  gui.h  models.h  ray_tracing.h  solver.h
mains/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  gui.cpp  ray_tracing.cpp  solver.cpp
tests/: CMakeLists.txt  glm_test.cpp
